guide: testprograms: update ADC test program

--- a/doc/guide/testprograms.tex
+++ b/doc/guide/testprograms.tex
@@ -181,7 +181,8 @@ lab.
 \label{ADC}
 
 \wfile{test-apps/adc_usb_serial_test2/adc_usb_serial_test2.c} shows
-how to read from two multiplexed ADC channels.  For more details
+how to read from two multiplexed ADC channels, specifically the hat joystick
+channels (although it can be adapted for different purposes).  For more details
 see \wfile{mat91lib/adc/adc.h}.
 
 \inputminted{C}{../../src/test-apps/adc_usb_serial_test2/adc_usb_serial_test2.c}
