guide: debugging: add link to GDB cheatsheet

--- a/doc/guide/debugging.tex
+++ b/doc/guide/debugging.tex
@@ -29,4 +29,5 @@ However, this does not reset the peripherals as with a power-on reset.
 The backtrace, \code{bt}, command is useful to show the function call
 stack.
 
-
+A handy overview of GDB's CLI commands can be found at:
+\url{https://darkdust.net/files/GDB%20Cheat%20Sheet.pdf}.
