Add photo of radio

--- a/doc/guide/hardware.tex
+++ b/doc/guide/hardware.tex
@@ -152,6 +152,12 @@ The capacitor connected to the bootstrap pin must be rated for
 
 \subsection{NRF24L01+ radio}\label{nrf24l01-radio}
 
+\begin{figure}[!h]
+  \centering \includegraphics[width=1in]{figs/nrf24.jpg}
+  \caption{Photo of NRF24 radio.}
+  \label{fig:nrf24}
+\end{figure}
+
 The nRF24 module we provide is actually a tiny PCB with all of the high
 frequency analogue components populated for you. This module breaks out
 the SPI communication pins, the power supply pins, and two signal pins
