Enable status LED at start

--- a/doc/instructions/instructions.tex
+++ b/doc/instructions/instructions.tex
@@ -179,7 +179,7 @@ Notes:
 
 \item Do not underestimate the blinky milestone.  It requires having a
   functional PCB with a microcontroller that turns on properly, a
-  functional toolchainm, and the ability to download code into the
+  functional toolchain, and the ability to download code into the
   microcontroller's flash memory.
 \end{enumerate}
 
