--- a/doc/guide/guide.tex
+++ b/doc/guide/guide.tex
@@ -88,9 +88,9 @@
 \newcommand{\reftab}[1]{\mbox{Table~\ref{tab:#1}}}
 \newcommand{\refeqn}[1]{\mbox{(\ref{eqn:#1})}}
 
-\title{\sout{Mutley's} Guide To The Wacky Racers, V.013E-3}
+\title{\sout{Mutley's} Guide To The Wacky Racers, V1.01}
 \author{Michael Hayes}
-\date{2021}
+\date{2022}
 
 \begin{document}
 \maketitle
