--- a/doc/guide/hardware.tex
+++ b/doc/guide/hardware.tex
@@ -150,7 +150,7 @@ direction and slow decay in the other.
 The capacitor connected to the bootstrap pin must be rated for
 16\,V. The datasheet recommends an X7R dielectric.
 
-\subsection{NRF24L01+ radio}\label{nrf24l01-radio}
+\subsection{NRF24L01+ radio}
 
 \begin{figure}[!h]
   \centering \includegraphics[width=1in]{figs/nrf24.jpg}
