--- a/doc/guide/openocd.tex
+++ b/doc/guide/openocd.tex
@@ -1,4 +1,5 @@
 \chapter{OpenOCD}
+\label{OpenOCD}
 
 The Open On-Chip Debugger (OpenOCD) is an open-source on-chip
 debugging, in-system programming, and boundary-scan testing tool. It
