--- a/doc/guide/rework.tex
+++ b/doc/guide/rework.tex
@@ -63,6 +63,7 @@ solder bridges.
 
 
 \section{Flux removal}
+\label{flux removal}
 
 \begin{enumerate}
 \item Scrub board with using flux-cleaner and brush.
