--- a/doc/guide/schematic.tex
+++ b/doc/guide/schematic.tex
@@ -24,12 +24,12 @@ See the ENCE461 Learn page for the Altium tutorial.
 
 
 \section{Check list}
-\label{PCB-check-list}
+\label{schematic-check-list}
 
 You must check the schematic carefully.  I use a highlighter to mark
 every wire and component.  If you get the schematic wrong, the PCB
 will be wrong, and you will have to do much rework, see
-\reffig{fig:rework}.
+\reffig{rework}.
 
 
 \begin{figure}[!h]
