--- a/doc/guide/testprograms.tex
+++ b/doc/guide/testprograms.tex
@@ -171,7 +171,7 @@ Notes:
 
 \item If the program hangs in the \code{panic} loop, there is no
   response from the radio module, check SPI connections and see
-  \hyperref[debugging_Spi]{SPI debugging}.
+  \hyperref[debugging-spi]{SPI debugging}.
 
 \item The radio has two modes: transmit and receive.  Calling
   \code{nrf24_write} switches to transmit mode and calling
