--- a/doc/instructions/instructions.tex
+++ b/doc/instructions/instructions.tex
@@ -22,6 +22,16 @@
 
 \newcommand{\code}[1]{\texttt{#1}}
 
+\newcommand{\danielemail}{\url{mailto:daniel.morris@pg.canterbury.ac.nz}}
+\newcommand{\scottemail}{\url{mailto:scott.lloyd@.canterbury.ac.nz}}
+\newcommand{\diegoemail}{\url{mailto:diego.ramirez@canterbury.ac.nz}}
+
+\newcommand{\daniel}{\href{mailto:daniel.morris@pg.canterbury.ac.nz}{Daniel Morris}}
+\newcommand{\scott}{\href{mailto:scott.lloyd@.canterbury.ac.nz}{Scott Lloyd}}
+\newcommand{\diego}{\href{mailto:diego.ramirez@canterbury.ac.nz}{Diego Ramirez}}
+
+\newcommand{\theguide}{\href{https://eng-git.canterbury.ac.nz/wacky-racers/wacky-racers/-/blob/master/doc/guide/guide.pdf}{The Wacky Racers Guide}}
+
 
 \begin{document}
 \maketitle
@@ -172,6 +182,9 @@ Lab (ESL) are:
 Notes:
 %
 \begin{enumerate}
+\item There are two lab streams.  Your group will need to sign up to
+  one of the streams.
+
 \item There there may be a 6--10 day delay for the PCBs to be
   manufactured from the time of submission.  You will then need to
   book an assembly session in the SMT lab provided you have done the
@@ -181,6 +194,7 @@ Notes:
   functional PCB with a microcontroller that turns on properly, a
   functional toolchain, and the ability to download code into the
   microcontroller's flash memory.
+
 \end{enumerate}
 
 
@@ -206,7 +220,7 @@ The marks breakdown (max. 0x64) is:
 
 There are five milestones.  To achieve the associated marks, they must
 be demonstrated to a T.A. by the end of the lab for your allotted
-stream.  If you need an exception to this, see Daniel Morris with a
+stream.  If you need an exception to this, see \daniel\ with a
 \emph{very} good reason.  The milestone requirements are:
 %
 \begin{description}
@@ -318,9 +332,15 @@ This is assessed after the competition.  The categories are:
 \item [Week~1]\mbox{}\\
 
   \begin{itemize}
-  \item Form a group of four and register your group on Learn.
+  \item Form a group of four and register your group on Learn.  Group
+    numbers below 20 are for the Tuesday lab session, group numbers
+    above 20 are for the Wednesday lab session.  If you cannot form a
+    group of 4, contact \daniel.
+
   \item Read the Requirements section in this document.
-  \item Read the System Design section in the Wacky Racers Guide.
+
+  \item Read the System Design section in the \theguide.
+
   \item Peruse the datasheets of the key components.
   \end{itemize}
 
@@ -328,7 +348,9 @@ This is assessed after the competition.  The categories are:
 
   \begin{itemize}
   \item Attend Altium schematic tutorial.
+
   \item Start your schematic design.
+
   \item Sign-up for a SMT lab induction.
   \end{itemize}
 
@@ -487,9 +509,7 @@ repository, you can get the updated stuff using:
 \begin{enumerate}
 \item Read the Altium tutorial on Learn.
 
-%  \href{http://ecewiki.elec.canterbury.ac.nz/mediawiki/index.php/ENCE461_Altium_tutorial}{Altium tutorial on ecewiki}.
-
-\item Read the Wacky Racers Guide.
+\item Read the \theguide.
 
 \item Add you and your partner's name and your group number to the
   title block on your schematic.
@@ -570,9 +590,7 @@ repository, you can get the updated stuff using:
 For every violation of one these rules, we will deduct 1\% from your
 final mark.
 
-\item Check the
-  \href{http://ecewiki.elec.canterbury.ac.nz/mediawiki/index.php/PCB_checklist}{PCB
-    checklist on ecewiki} before submission.
+\item Check the checklist in the \theguide\ before submission.
 \end{enumerate}
 
 
@@ -594,7 +612,7 @@ final mark.
 \subsection{Software}
 
 \begin{enumerate}
-\item Read the Wacky Racers Guide.
+\item Read the \theguide.
 
 \item If you are not using version control, you are foolish.
 
@@ -652,32 +670,52 @@ have missed and let you fix it without asking for help.
 
 \section{Assistance}
 
+\daniel\ (\danielemail) is in charge of the assignment with support
+from the technicians \scott\ (\scottemail) and \diego\ (\diegoemail),
+and a team of teaching assistants.
 
 \begin{itemize}
 \item Emails to the lecturers (except of a personal nature) will be
   quietly ignored.
 
-\item Questions anwered on the ENCE461 Learn discussion page will be
-  promptly answered.
+\item If you have a generic question, please use the ENCE461 Learn
+  discussion page; this will be promptly answered.
 
 \item All decisions regarding legality of your dastardly devices are
-  at the whim of Daniel Morris.  You can email Daniel at
-  \href{mailto://daniel.morris@pg.canterbury.ac.nz}{daniel.morris@pg.canterbury.ac.nz}
-  if you wish to keep your ideas secret.
+  at the whim of \daniel.  Email \daniel\ if you wish to keep your
+    ideas secret.
 
 \item TAs will be available in the scheduled lab times.  Priority will
   be given to groups assigned to the current lab session. \textbf{We
     will only provide assistance to students who have a printed A3
     schematic sheet in front of them and have already tried looking up
-    the problem in the Wacky Racers Guide.}
+    the problem in the \theguide.}
 
 \item Questions pertaining to Altium and surface mount rework will be
-  answered by Scott Lloyd (SMT Lab technician) and Diego Ramirez
-  (Electronics Lab technician).
+  answered by \scott\ (SMT Lab technician) and \diego\ (Electronics
+  Lab technician).
 
 \item Michael Hayes is really busy pulling all the string behind the
   scenes and so will only help with gnarly problems referred to by the
   TAs!
+
+\end{itemize}
+
+
+\section{COVID}
+
+
+\begin{itemize}
+\item Some of the lab sessions may need to be held online.
+
+\item The first term does not need lab access, however, you will need
+  to be able to run Altium remotely or run the free student-edition of
+  Altium.
+
+\item If because of illness your group cannot meet a milestone, email
+  \daniel.
+
+\item Some of the milestones may need to be altered.
 
 \end{itemize}
 
