--- a/doc/instructions/instructions.tex
+++ b/doc/instructions/instructions.tex
@@ -271,6 +271,7 @@ Functionality requirements:
   \begin{tabular}{l|l}
     Wacky racer & Wacky hat \\ \hline \hline
     Blink LED                      & Blink LED \\
+    Drives LED tape                & Drives LED tape \\
     Drive motors forward/backward  & Read from IMU \\
     Speed control of motors        & Calculate speeds from IMU \\
     Steering control               & Joystick control \\
