--- a/doc/instructions/instructions.tex
+++ b/doc/instructions/instructions.tex
@@ -343,22 +343,24 @@ This is assessed after the competition.  The categories are:
   \item Read the System Design section in the \theguide.
 
   \item Peruse the datasheets of the key components.
+
+  \item Attend Altium schematic tutorial.
+
   \end{itemize}
 
 \item [Week~2]\mbox{}\\
 
   \begin{itemize}
-  \item Attend Altium schematic tutorial.
-
   \item Start your schematic design.
 
-  \item Sign-up for a SMT lab induction.
+%  \item Sign-up for a SMT lab induction
   \end{itemize}
 
 \item [Week~3]\mbox{}\\
 
   \begin{itemize}
   \item Submit you Altium schematic for review.
+
   \item Attend review feedback session.
   \end{itemize}
 
@@ -366,13 +368,15 @@ This is assessed after the competition.  The categories are:
 
   \begin{itemize}
   \item Attend Altium PCB tutorial.
+
   \item Start your PCB layout.
   \end{itemize}
 
 \item [Week~5]\mbox{}\\
 
   \begin{itemize}
-  \item Attend SMT lab induction.
+  \item Watch SMT lab induction video.
+
   \item Submit PCB design (early round).
   \end{itemize}
 
@@ -424,6 +428,7 @@ This is assessed after the competition.  The categories are:
 
   \begin{itemize}
   \item Demonstrate full functionality.
+
   \item Plan your costumes!
   \end{itemize}
 
