Tweak contribution wording

--- a/doc/critique/critique-template.tex
+++ b/doc/critique/critique-template.tex
@@ -44,9 +44,8 @@
 
 \section{Contribution}
 
-\comment{In this section describe what you perceive as your contribution
-  to the project compared to the other members of your team.}
-
+\comment{ In this section describe your contribution to the project
+  compared to what all the other members of your team did.}
 
 
 \section{Recommendations for future students}
@@ -71,7 +70,7 @@
     partner's contributions to your board.  Usually, you will only
     have two names in this section except for groups of five students
     where there may be three names.}
-    
+
   \item [\comment{Whole system}] \comment{Here you assess you and your
     team members' contribution to the whole system (group
     coordination, chassis, dastardly stuff, system integration, work
@@ -141,7 +140,7 @@ Mutley         &              & Mutley           &       \\ \hline
 \item The critiques can be created in Word or \LaTeX.  Use the
   appropriate template but delete the instructions.
 
-\item Delete all the instructions in blue.  
+\item Delete all the instructions in blue.
 
 \item Each section should be approximately the same length.
 
@@ -157,4 +156,3 @@ Mutley         &              & Mutley           &       \\ \hline
   deduct 10\% for non PDF documents.
 \end{enumerate}
 \end{document}
-
